--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
+PORT=3000
 DATABASE_HOST=localhost
-DATABASE_PORT=5432
+DATABASE_PORT=27017
 DATABASE_NAME=cutch
-DATABASE_USER=postgres
+DATABASE_USER=admin
 DATABASE_PASSWORD=admin
+DATABASE_AUTH_SOURCE=admin
